--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -69,6 +82,10 @@
         <pluginRepository>
             <id>apache.snapshots</id>
             <url>https://repository.apache.org/snapshots</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>apache</id>
+            <url>https://repository.apache.org</url>
         </pluginRepository>
     </pluginRepositories>
 
