--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>dev.satyrn</groupId>
     <artifactId>papermc-api</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>PaperMC API</name>
 
-    <description>Provides commmon functionality for satyrnidae's PaperMC plugins.</description>
+    <description>Provides common functionality for satyrnidae's PaperMC plugins.</description>
     <properties>
         <java.version>1.17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -57,6 +57,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.7</version>
             </plugin>
         </plugins>
         <resources>
@@ -112,7 +117,23 @@
     <distributionManagement>
         <repository>
             <id>ftp.satyrn.dev</id>
+            <name>Artifact Deployment</name>
             <url>sftp://ftp.satyrn.dev:22/maven</url>
         </repository>
+        <site>
+            <id>ftp.satyrn.dev</id>
+            <name>Site deployments</name>
+            <url>sftp://ftp.satyrn.dev:22/sites/${project.artifactId}/</url>
+        </site>
     </distributionManagement>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
