--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <version>1.9.0</version>
     <packaging>jar</packaging>
 
-    <name>PaperMC API</name>
+    <name>Paper Wasp API - A PaperMC Utility Library</name>
 
-    <description>Provides common functionality for satyrnidae's PaperMC plugins.</description>
+    <description>The Paper Wasp API provides common functionality for saturniidae's PaperMC plugins.</description>
     <properties>
         <java.version>1.17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
