--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.satyrn</groupId>
     <artifactId>papermc-api</artifactId>
-    <version>1.10.0-SNAPSHOT</version>
+    <version>1.10.0</version>
     <packaging>jar</packaging>
 
     <name>Paper Wasp API - A PaperMC Utility Library</name>
